fix for partner footer alignment

--- a/child zip/updates from staging radical on/style.css
+++ b/child zip/updates from staging radical on/style.css
@@ -538,6 +538,11 @@ padding: 65px 0px 0px 0px !important;
   line-height: 1em;
 }
 
+.whatwedo-meerweten-title{
+  text-align: center;
+}
+
+
 #whatwedo-contact-row {
   margin-right: -15px;
 }
